# inventory-management

./: CMakeLists.txt  README  README.md
include/: commands.h  inventory.h
src/: commands.cpp  inventory.cpp  main.cpp
